--- a/colorfulnews/src/main/res/layout/activity_news.xml
+++ b/colorfulnews/src/main/res/layout/activity_news.xml
@@ -1,9 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".module.news.NewsActivity">
+    tools:context=".module.news.activity.NewsActivity"
+    tools:openDrawer="start">
 
-</android.support.constraint.ConstraintLayout>
+    <include
+        layout="@layout/app_bar_news"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/container_background"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_news"
+        app:itemTextColor="@color/primary_text"
+        app:menu="@menu/activity_main_drawer" />
+
+</android.support.v4.widget.DrawerLayout>
