--- a/colorfulnews/src/main/res/layout/activity_news_channel.xml
+++ b/colorfulnews/src/main/res/layout/activity_news_channel.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".module.news.NewsChannelActivity">
+    tools:context=".module.news.activity.NewsChannelActivity">
 
 </android.support.constraint.ConstraintLayout>
