--- a/colorfulnews/src/main/res/layout/activity_news_detail.xml
+++ b/colorfulnews/src/main/res/layout/activity_news_detail.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".module.news.NewsDetailActivity">
+    tools:context=".module.news.activity.NewsDetailActivity">
 
 </android.support.constraint.ConstraintLayout>
