--- a/colorfulnews/src/main/res/layout/activity_photo.xml
+++ b/colorfulnews/src/main/res/layout/activity_photo.xml
@@ -12,7 +12,7 @@
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".module.news.NewsActivity">
+        tools:context=".module.news.activity.NewsActivity">
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
