--- a/colorfulnews/src/main/res/layout/item_news_photo.xml
+++ b/colorfulnews/src/main/res/layout/item_news_photo.xml
@@ -1,5 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    style="@style/news_summary_card_view"
+    app:cardBackgroundColor="@color/item_background"
+    app:cardElevation="2dp">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical">
+
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/item_margin"
+            android:layout_marginRight="@dimen/item_margin"
+            android:layout_marginTop="@dimen/item_margin"
+            android:singleLine="true"
+            android:textColor="@color/primary_text"
+            android:textSize="@dimen/medium"
+            tools:text="安东尼戴维斯宣布加盟湖人 詹姆斯激动到流涕"/>
+
+        <LinearLayout
+            android:id="@+id/ll_photo"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/iv_left_photo"
+                style="@style/news_summary_photo_iv"
+                tools:src="@mipmap/ic_launcher"/>
+            <ImageView
+                android:id="@+id/iv_middle_photo"
+                style="@style/news_summary_photo_iv"
+                tools:src="@mipmap/ic_launcher"/>
+            <ImageView
+                android:id="@+id/iv_right_photo"
+                style="@style/news_summary_photo_iv"
+                tools:src="@mipmap/ic_launcher"/>
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tv_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginBottom="4dp"
+            android:layout_marginRight="@dimen/item_margin"
+            android:textColor="@color/tertiary_text"
+            android:textSize="@dimen/micro"
+            tools:text="06-13 09:52"/>
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
