--- a/app/src/main/res/layout/activity_news_browser.xml
+++ b/app/src/main/res/layout/activity_news_browser.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:clipToPadding="true"
-              android:fitsSystemWindows="true"
-              android:orientation="vertical"
-              tools:context="com.kaku.colorfulnews.mvp.ui.activities.NewsBrowserActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:clipToPadding="true"
+    android:fitsSystemWindows="true"
+    android:orientation="vertical"
+    tools:context="com.kaku.colorfulnews.mvp.ui.activities.NewsBrowserActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         style="@style/action_bar"
         android:theme="@style/AppTheme.AppBarOverlay"
         app:navigationIcon="@drawable/ic_arrow_back"
-        app:title="@string/news"/>
+        app:title="@string/news" />
 
     <ProgressBar
         android:id="@+id/progress_bar"
@@ -24,12 +24,11 @@
         android:background="@null"
         android:indeterminateOnly="false"
         android:max="100"
-        android:progressDrawable="@drawable/progress_bar_horizontal"/>
+        android:progressDrawable="@drawable/progress_bar_horizontal" />
 
     <WebView
         android:id="@+id/web_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </WebView>
+        android:layout_height="match_parent"></WebView>
 
 </LinearLayout>
