--- a/colorfulnews/src/main/res/layout/activity_news_detail.xml
+++ b/colorfulnews/src/main/res/layout/activity_news_detail.xml
@@ -45,6 +45,7 @@
                 tools:visibility="visible" />
 
             <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
