--- a/colorfulnews/src/main/res/layout/content_photo.xml
+++ b/colorfulnews/src/main/res/layout/content_photo.xml
@@ -47,5 +47,5 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:src="@drawable/ic_arrow_upward"
-        app:layout_behavior=".widget.ScrollAwareFABBehavior"/>
+        app:layout_behavior=".widget.HideBehavior"/>
 </merge>
