--- a/colorfulnews/src/main/res/layout/activity_photo_detail.xml
+++ b/colorfulnews/src/main/res/layout/activity_photo_detail.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:background="@color/black"
-    tools:context=".module.photo.PhotoDetailActivity">
+    tools:context=".module.photo.activity.PhotoDetailActivity">
 
     <com.cgy.colorfulnews.widget.PullBackLayout
         android:id="@+id/pull_back_layout"
